po: update po/fr_CA/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/drupal-civicrm.po
+++ b/po/fr_CA/drupal-civicrm.po
@@ -7,6 +7,7 @@
 # lavamind <jerome@riseup.net>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2016
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-26 01:00+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1300,7 +1301,7 @@ msgstr "La contribution totale moins les frais de traitement."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Transaction ID"
-msgstr "référence de transaction"
+msgstr "Référence de transaction"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Unique Transaction ID from Payment Processor / Bank etc"
