--- a/po/fr_CA/pledge.po
+++ b/po/fr_CA/pledge.po
@@ -8,14 +8,15 @@
 # pictogram <inactive+pictogram@transifex.com>, 2013
 # pictogram <inactive+pictogram@transifex.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-26 02:25+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -800,7 +801,7 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
-msgstr ""
+msgstr "Confirmation envoyée?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter a number"
