--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -10,6 +10,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2014-2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012,2014
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 18:04+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-10-26 02:19+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -155,7 +156,7 @@ msgstr "Statut d'envoi"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Bounce Types"
-msgstr "Type de redond"
+msgstr "Type de retour"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Opens"
