--- a/po/pl_PL/common-base.po
+++ b/po/pl_PL/common-base.po
@@ -8,7 +8,7 @@
 # igorczajka <igor@czajka.art.pl>, 2014
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
 # Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
-# Michał Mach <michau@gmail.com>, 2012-2014
+# Michał Mach <michau@gmail.com>, 2012-2014,2016
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Radek <d.exax@hotmail.com>, 2013
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-25 16:10+0000\n"
+"Last-Translator: Michał Mach <michau@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,7 +139,7 @@ msgstr "Wszystkie"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr ""
+msgstr "ID ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -370,7 +370,7 @@ msgstr "Wybierz zestaw danych niestandardowych (lub Wszystkie dane niestandardow
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select an Event (or ALL Events)."
-msgstr "Proszę wybrać Wydarzenie (lub WSZYSTKIE Wydarzenia) "
+msgstr "Proszę wybrać wydarzenie (lub WSZYSTKIE wydarzenia) "
 
 #: CRM/ACL/Form/ACL.php CRM/ACL/Form/ACLBasic.php
 msgid "Selected ACL has been deleted."
@@ -383,7 +383,7 @@ msgstr "Wybrany ACL został usunięty."
 #: templates/CRM/Contact/Page/View/CustomData.tpl
 #: templates/CRM/Custom/Page/CustomDataView.tpl
 msgid "Record Deleted"
-msgstr "Notatka usunięta"
+msgstr "Rekord usunięty"
 
 #: CRM/ACL/Form/ACLBasic.php
 msgid "ACL Type"
@@ -624,7 +624,7 @@ msgstr "Osoba przypisana do interakcji"
 #: CRM/Activity/BAO/Query.php CRM/Contact/BAO/Query.php
 #: CRM/Core/BAO/CustomQuery.php
 msgid "%1 %2 %3"
-msgstr ""
+msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
@@ -644,7 +644,7 @@ msgstr ""
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity is a Test"
-msgstr ""
+msgstr "Aktywność testowa"
 
 #: CRM/Activity/BAO/Query.php CRM/Activity/DAO/Activity.php
 #: CRM/Activity/Import/Form/MapField.php CRM/Activity/Selector/Activity.php
@@ -664,7 +664,7 @@ msgstr "LUB"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity Result - %1"
-msgstr ""
+msgstr "Rezultat interakcji - %1"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities which have Followup Activities"
@@ -1579,7 +1579,7 @@ msgstr ""
 
 #: CRM/Activity/Page/Tab.php CRM/Dashlet/Page/Activity.php
 msgid "Activity Filter"
-msgstr ""
+msgstr "Filtr interakcji"
 
 #: CRM/Activity/Page/Tab.php
 msgid "Email a Contact"
@@ -1751,7 +1751,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Untag Activities (remove tags)"
-msgstr ""
+msgstr "Odkategoryzuj interakcje (usuń kategorie)"
 
 #: CRM/Contact/BAO/Contact/Permission.php
 msgid ""
@@ -1914,7 +1914,7 @@ msgstr "Zarejestruj na wydarzenie"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Record Activity"
-msgstr ""
+msgstr "Zapisz interakcję"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Add Pledge"
@@ -1948,11 +1948,11 @@ msgstr "Dodaj do grupy"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Tag Contact"
-msgstr ""
+msgstr "Skategoryzuj kontakt"
 
 #: CRM/Contact/BAO/Group.php xml/templates/civicrm_data.tpl
 msgid "Child of"
-msgstr ""
+msgstr "Dziecko grupy: "
 
 #: CRM/Contact/BAO/Group.php templates/CRM/Contact/Form/Search/Advanced.hlp
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
@@ -11848,7 +11848,7 @@ msgstr[2] ""
 
 #: CRM/Profile/Form.php
 msgid "A record already exists with the same information."
-msgstr ""
+msgstr "W naszej bazie istnieje już rekord zawierający te same dane."
 
 #: CRM/Profile/Form.php
 msgid "Your record has been deleted."
