po: update po/fr_CA/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 18:29+0000\n"
+"PO-Revision-Date: 2016-10-26 15:49+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -6800,14 +6800,14 @@ msgstr ""
 msgid ""
 "Change all occurrences of a word or phrase in CiviCRM screens (e.g. replace "
 "all occurrences of 'Contribution' with 'Donation')."
-msgstr ""
+msgstr "Substitue toutes les occurrences d'un ou d'une phrase dans les écrans de CiviCRM (ex : substitue toutes les occurrences de ‘Contribution' par ‘Donation')."
 
 #: templates/CRM/Admin/Form/WordReplacements.tpl
 msgid ""
 "Use <strong>Word Replacements</strong> to change all occurrences of a word "
 "or phrase in CiviCRM screens (e.g. replace all occurrences of 'Contribution'"
 " with 'Donation')."
-msgstr ""
+msgstr "Utilisez<strong>Remplacement de mots</strong> pour changer toutes les occurrences d'un mot ou d'une phrase dans les écrans de CiviCRM (ex : remplacer toutes les occurrences de ‘Contribution' par ‘Donation')."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Api Chaining"
