--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-06 16:08+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-10-26 14:19+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25902,7 +25902,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Configure Default Mailbox"
-msgstr ""
+msgstr "Standard-Mailbox einrichten"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "A default mailbox must be configured for email bounce processing."
@@ -26073,8 +26073,8 @@ msgstr ""
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extension Update Available"
 msgid_plural "%count Extension Updates Available"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Update für Extension verfügbar"
+msgstr[1] "%count Updates für Extensions verfügbar"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "1 extension is up-to-date:"
@@ -26186,11 +26186,11 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Remote Profiles Enabled"
-msgstr ""
+msgstr "Externe Profile sind aktiviert"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
-msgstr ""
+msgstr "Details ansehen und Benachrichtigungen bearbeiten"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
