--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 02:02+0000\n"
+"PO-Revision-Date: 2016-10-26 14:21+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -9770,7 +9770,7 @@ msgstr "Date de réception de la contribution"
 
 #: CRM/Core/SelectValues.php CRM/Export/BAO/Export.php
 msgid "Transaction ID"
-msgstr "référence de transaction"
+msgstr "Référence de transaction"
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Invoice ID"
@@ -15753,7 +15753,7 @@ msgstr[1] "%count contacts"
 #: templates/CRM/Contact/Form/Search/ResultTasks.tpl
 #: templates/CRM/common/searchResultTasks.tpl
 msgid "Select Records"
-msgstr "Sélection des enregistrements trouvés:"
+msgstr "Sélection des enregistrements trouvés"
 
 #: templates/CRM/Contact/Form/Search/ResultTasks.tpl
 #: templates/CRM/common/searchResultTasks.tpl
