--- a/po/fr_CA/campaign.po
+++ b/po/fr_CA/campaign.po
@@ -8,13 +8,14 @@
 # pictogram <pictogram69@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
+# Rick Paré <rick.pare69@gmail.com>, 2016
 # samuelsov <samuel@koumbit.org>, 2011-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-10-26 14:36+0000\n"
+"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1023,7 +1024,7 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr "Votre organisation peut utiliser les campagnes pour suivre toutes les interactions avec les contacts engagées dans le cadre d'une campagne de collecte de fonds ou d'engagement. Vous pouvez associer à une campagne donnée des activités, contributions, participations à événements, mailings, adhésions et engagements de don."
+msgstr "Votre organisation peut utiliser les campagnes pour suivre toutes les interactions avec les contacts engagées dans le cadre d'une campagne de collecte de fonds ou d'engagement. Vous pouvez associer à une campagne donnée des activités, contributions, participations des événements, publipostages, adhésions et engagements de don."
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
