po: update po/fr_CA/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/contribute.po
+++ b/po/fr_CA/contribute.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 02:14+0000\n"
+"PO-Revision-Date: 2016-10-26 19:08+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -296,7 +296,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
-msgstr ""
+msgstr "Identifiant de la note de crédit"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Introduction Text"
@@ -720,7 +720,7 @@ msgstr "Ce numéro de facture existe déjà dans la base de données."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
-msgstr ""
+msgstr "Cette identifiant de la note de crédit existe déjà dans la base de données."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Send Initial Reminder"
@@ -2324,7 +2324,7 @@ msgstr "Numéro de référence interne unique de cette contribution."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal Credit Note ID for this contribution."
-msgstr ""
+msgstr "Identifiant unique de la note de crédit pour cette contribution."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Date that a thank-you message was sent to the contributor."
@@ -2362,7 +2362,7 @@ msgstr "Pour les contributions hors-ligne, vous pouvez enregistrer un identifian
 #: templates/CRM/Contribute/Form/AdditionalPayment.hlp
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid "Choose the method by which this transaction was paid."
-msgstr "Choisir la méthode de paiement de cette transaction"
+msgstr "Choisir la méthode de paiement de cette transaction."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.hlp
 #: templates/CRM/Contribute/Page/Tab.hlp
@@ -3555,7 +3555,7 @@ msgid ""
 "Review your customized <strong>LIVE</strong> online contribution page here. "
 "Use the following URL in links and buttons on any website to send visitors "
 "to this live page:"
-msgstr ""
+msgstr "Révisez votre page personnalisée de contribution en ligne. Utilisez l'URL suivant dans les liens et les boutons sur un site Web pour envoyer les visiteurs sur cette page:"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "Contribution Links"
@@ -4660,14 +4660,14 @@ msgid ""
 "Use this section to indicate that the contribution came in via a "
 "constituent's Personal Campaign Page (PCP), OR should be credited to that "
 "PCP post facto."
-msgstr ""
+msgstr "Utilisez cette section pour indiquer que la contribution est faite par l'intermédiaire d'une page de campagne personnelle ou doit être crédité à celle-ci a posteriori."
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
 "When contributions are made via a Personal Campaign Page a soft credit (of "
 "type 'Personal Campaign Page') is automatically created and assigned to the "
 "'owner' of the the Personal Campaign Page."
-msgstr ""
+msgstr "Lorsque les contributions sont faites par l'intermédiaire d'une page de campagne personnelle un crédit indirect de type 'Page de campagne personnelle' est automatiquement créé et attribué à l'initiateur de la campagne."
 
 #: templates/CRM/Contribute/Page/Tab.hlp
 msgid ""
@@ -5299,7 +5299,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
-msgstr ""
+msgstr "Cliquez sur la flèche pour voir les détails du paiement."
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Total Cancelled Soft Credits"
@@ -5317,7 +5317,7 @@ msgstr ""
 msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
-msgstr ""
+msgstr "Noter: si le mode de paiement désiré n'est pas dans la liste (ex: pour les dons en nature), demandez à votre administrateur de l'ajouter."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Pay Now"
