--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 19:50+0000\n"
+"PO-Revision-Date: 2016-10-26 19:12+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1395,7 +1395,7 @@ msgstr "Texte du lien invitant les participants à créer une page de contributi
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Social Sharing"
-msgstr "partage social"
+msgstr "Partage social"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 #: templates/CRM/PCP/Form/Contribute.tpl
