--- a/po/pt_BR/mailing.po
+++ b/po/pt_BR/mailing.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2011-2012
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-10-26 15:35+0000\n"
+"Last-Translator: Débora Maia <debora@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,7 +60,7 @@ msgstr "Excluído o mailing selecionado."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
-msgstr ""
+msgstr "Mensagem SMS"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Use Template"
@@ -895,7 +896,7 @@ msgstr "Conteúdo do e-mail em massa"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
-msgstr ""
+msgstr "acessar CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
@@ -988,7 +989,7 @@ msgstr "Mailings enviados para %1"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Draft"
-msgstr ""
+msgstr "Rascunho"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Testing"
@@ -1166,11 +1167,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Salvar Como"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Endereço de Email"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
@@ -1194,7 +1195,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Email de Teste"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
@@ -1202,19 +1203,19 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Enviar teste"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Enviar email de teste para grupo:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Enviar mensagem de teste para grupo"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Enviar para %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
@@ -1222,11 +1223,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
-msgstr ""
+msgstr "Nenhum dos contatos neste grupo têm um endereço de e-mail."
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "O grupo está vazio."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
@@ -1239,7 +1240,7 @@ msgstr ""
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Acompanhar as respostas"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
@@ -1251,11 +1252,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Incluir:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Excluir:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1278,7 +1279,7 @@ msgstr "Aberto"
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Form/Settings.tpl
 msgid "Responding"
-msgstr ""
+msgstr "Respondendo"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
