po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-07 08:20+0000\n"
+"PO-Revision-Date: 2016-10-27 15:05+0000\n"
 "Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -10305,7 +10305,7 @@ msgstr "Veuillez entrer une date valide comme valeur par défaut en utilisant le
 #: CRM/Custom/Form/Field.php
 msgid ""
 "Please enter 1 (for Yes) or 0 (for No) if you want to set a default value."
-msgstr "Veuillez entrer 1 (pour oui) ou 0 (pour nom) si vous voulez définir une valeur par défaut."
+msgstr "Veuillez entrer 1 (pour oui) ou 0 (pour non) si vous voulez définir une valeur par défaut."
 
 #: CRM/Custom/Form/Field.php CRM/Custom/Form/Option.php
 msgid "Invalid default value for country."
@@ -24971,7 +24971,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Please enter a positive integer"
-msgstr ""
+msgstr "Veuillez entrer un entier positif"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Max Age"
@@ -26508,7 +26508,7 @@ msgstr ""
 
 #: templates/CRM/Price/Page/Option.tpl
 msgid "Maximum"
-msgstr ""
+msgstr "Maximum"
 
 #: templates/CRM/Profile/Page/MultipleRecordFieldsListing.tpl
 msgid "No records of type \\'%1\\' found."
