po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 11:36+0000\n"
+"PO-Revision-Date: 2016-10-27 14:53+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -45,12 +45,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaign Types"
-msgstr ""
+msgstr "Tipovi kampanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaign Status"
-msgstr ""
+msgstr "Status kampanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -60,7 +60,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCampaign Component Settings"
-msgstr ""
+msgstr "Podešavanje CiviCampaign komponenata"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -83,19 +83,19 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Petition"
-msgstr ""
+msgstr "Nova peticija"
 
 msgctxt "menu"
 msgid "Sign Petition"
-msgstr ""
+msgstr "Potpiši peticiju"
 
 msgctxt "menu"
 msgid "View Petition Signatures"
-msgstr ""
+msgstr "Pregledaj potpise peticije"
 
 msgctxt "menu"
 msgid "Email address verified"
-msgstr ""
+msgstr "Verifikovan email"
 
 msgctxt "menu"
 msgid "Thank You"
@@ -111,7 +111,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "CiviCase Dashboard"
-msgstr ""
+msgstr "CiviCase kontrolna tabla"
 
 msgctxt "menu"
 msgid "Open Case"
@@ -198,7 +198,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Title and Settings"
-msgstr ""
+msgstr "Naslov i podešavanja"
 
 msgctxt "menu"
 msgid "Contribution Amounts"
@@ -210,7 +210,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Include Profiles"
-msgstr ""
+msgstr "Uključi profile"
 
 msgctxt "menu"
 msgid "Thank-you and Receipting"
@@ -218,7 +218,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Tell a Friend"
-msgstr ""
+msgstr "Recite prijatelju"
 
 msgctxt "menu"
 msgid "Configure Widget"
@@ -282,7 +282,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Additional Info"
-msgstr ""
+msgstr "Dodatne informacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -338,11 +338,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "PDF Invoice"
-msgstr ""
+msgstr "PDF profaktura"
 
 msgctxt "menu"
 msgid "Email Invoice"
-msgstr ""
+msgstr "Email profaktura"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -418,22 +418,22 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Profile Settings"
-msgstr ""
+msgstr "Podešavanja profila"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Tags (Categories)"
-msgstr ""
+msgstr "Tagovi (Kategorije)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Tag"
-msgstr ""
+msgstr "Novi tag"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Types"
-msgstr ""
+msgstr "Tip aktivnosti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -443,7 +443,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contact Types"
-msgstr ""
+msgstr "Tipovi kontakata"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -453,7 +453,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Individual Prefixes (Ms, Mr...)"
-msgstr ""
+msgstr "Pojedinačni prefiksi (gospodine, gospođo...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -463,12 +463,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Location Types (Home, Work...)"
-msgstr ""
+msgstr "Tipovi lokacija (Kuća, posao...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Website Types"
-msgstr ""
+msgstr "Tipovi vebsajtova"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -502,7 +502,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Navigation Menu"
-msgstr ""
+msgstr "Navigacioni meni"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -517,7 +517,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Organization Address and Contact Info"
-msgstr ""
+msgstr "Adresa organizacije i kontakt podaci"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -532,12 +532,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Schedule Reminders"
-msgstr ""
+msgstr "Zakaži podsetnik"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
-msgstr ""
+msgstr "Željeni metod komunikacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -572,21 +572,21 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Languages, Currency, Locations"
-msgstr ""
+msgstr "Jezici, Valute, Lokacije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Address Settings"
-msgstr ""
+msgstr "Podešavanja adrese"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Formats"
-msgstr ""
+msgstr "Formati datuma"
 
 msgctxt "menu"
 msgid "Preferred Languages"
-msgstr ""
+msgstr "Prioritetni jezici"
 
 msgctxt "menu"
 msgid "Access Control"
@@ -599,26 +599,26 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Synchronize Users to Contacts"
-msgstr ""
+msgstr "Sinhronizacija korisnika sa kontaktima"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Configuration Checklist"
-msgstr ""
+msgstr "Konfiguraciona kontrolna lista"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Enable CiviCRM Components"
-msgstr ""
+msgstr "Uključi CiviCRM komponente"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Extensions"
-msgstr ""
+msgstr "Menadžment ekstenzija"
 
 msgctxt "menu"
 msgid "Database Upgrades"
-msgstr ""
+msgstr "Ažuriranje baze podataka"
 
 msgctxt "menu"
 msgid "Outbound Email Settings"
@@ -631,7 +631,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mapping and Geocoding"
-msgstr ""
+msgstr "Mapiranje i Geokoding"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -641,7 +641,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Directories"
-msgstr ""
+msgstr "Direktorijumi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -703,11 +703,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Zakazani poslovi"
 
 msgctxt "menu"
 msgid "Scheduled Jobs Log"
-msgstr ""
+msgstr "Log zakazanih poslova"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -720,7 +720,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Administer CiviCRM"
-msgstr ""
+msgstr "Administriraj CiviCRM"
 
 msgctxt "menu"
 msgid "Price Sets"
@@ -741,11 +741,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Sms Providers"
-msgstr ""
+msgstr "Sms provajderi"
 
 msgctxt "menu"
 msgid "New Mass SMS"
-msgstr ""
+msgstr "Novi masovni SMS"
 
 msgctxt "menu"
 msgid "Badge Layout"
@@ -757,7 +757,7 @@ msgstr "CiviCRM"
 
 msgctxt "menu"
 msgid "CiviCRM Home"
-msgstr ""
+msgstr "CiviCRM početna"
 
 msgctxt "menu"
 msgid "CiviCRM Dashlets"
@@ -766,7 +766,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Contacts"
-msgstr ""
+msgstr "Nađi kontakte"
 
 msgctxt "menu"
 msgid "Process Uploaded Images"
@@ -779,7 +779,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Advanced Search"
-msgstr ""
+msgstr "Napredna pretraga"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -793,12 +793,12 @@ msgstr ""
 
 msgctxt "menu"
 msgid "New Contact"
-msgstr ""
+msgstr "Novi kontakt"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Individual"
-msgstr ""
+msgstr "Novi pojedinac"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -808,19 +808,19 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Organization"
-msgstr ""
+msgstr "Nova organizacija"
 
 msgctxt "menu"
 msgid "Edit Related Contact"
-msgstr ""
+msgstr "Uredi povezni kontakt"
 
 msgctxt "menu"
 msgid "Merge Contact"
-msgstr ""
+msgstr "Spoji kontakte"
 
 msgctxt "menu"
 msgid "Email a Contact"
-msgstr ""
+msgstr "Pošalji email kontaktu"
 
 msgctxt "menu"
 msgid "Map Location(s)"
@@ -836,12 +836,12 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Delete Contact"
-msgstr ""
+msgstr "Obriši kontakt"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activities"
-msgstr ""
+msgstr "Aktivnosti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -850,11 +850,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Groups"
-msgstr ""
+msgstr "Grupe"
 
 msgctxt "menu"
 msgid "Smart Groups"
-msgstr ""
+msgstr "Smart grupe"
 
 msgctxt "menu"
 msgid "Sunlight"
@@ -862,15 +862,15 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Notes"
-msgstr ""
+msgstr "Beleške"
 
 msgctxt "menu"
 msgid "Tags"
-msgstr ""
+msgstr "Tagovi"
 
 msgctxt "menu"
 msgid "Contact Dashboard"
-msgstr ""
+msgstr "Kontrolna tabla za kontakte"
 
 msgctxt "menu"
 msgid "Activity Dashlet"
@@ -878,7 +878,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "CiviCRM Blog"
-msgstr ""
+msgstr "CiviCRM blog"
 
 msgctxt "menu"
 msgid "CiviCRM Getting Started"
@@ -900,7 +900,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find and Merge Duplicate Contacts"
-msgstr ""
+msgstr "Nađi i spoji duplikate kontakata"
 
 msgctxt "menu"
 msgid "Dedupe Exceptions"
@@ -908,35 +908,35 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Add User"
-msgstr ""
+msgstr "Dodaj korisnika"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Groups"
-msgstr ""
+msgstr "Uredi grupe"
 
 msgctxt "menu"
 msgid "Group Members"
-msgstr ""
+msgstr "Članovi grupe"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Group"
-msgstr ""
+msgstr "Nova grupa"
 
 msgctxt "menu"
 msgid "Import"
-msgstr ""
+msgstr "Import"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import Contacts"
-msgstr ""
+msgstr "Import kontakata"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import Activities"
-msgstr ""
+msgstr "Import aktivnosti"
 
 msgctxt "menu"
 msgid "Import Multi-value Custom Data"
@@ -944,15 +944,15 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Upgrade CiviCRM"
-msgstr ""
+msgstr "Ažuriraj CiviCRM"
 
 msgctxt "menu"
 msgid "Download Errors"
-msgstr ""
+msgstr "Greške u preuzimanju"
 
 msgctxt "menu"
 msgid "Export Contacts"
-msgstr ""
+msgstr "Eksport kontakata"
 
 msgctxt "menu"
 msgid "ACL Roles"
@@ -972,7 +972,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Registration Page"
-msgstr ""
+msgstr "Stranica za registraciju"
 
 msgctxt "menu"
 msgid "Browse Uploaded files"
@@ -980,11 +980,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Delete File"
-msgstr ""
+msgstr "Obriši fajl"
 
 msgctxt "menu"
 msgid "Log out"
-msgstr ""
+msgstr "Odjavi se"
 
 msgctxt "menu"
 msgid "CiviCRM API"
@@ -1161,12 +1161,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviMail"
-msgstr ""
+msgstr "CiviMail"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailer Settings"
-msgstr ""
+msgstr "Podešavanja mailera"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1181,12 +1181,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Mailing"
-msgstr ""
+msgstr "Novi mailing"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Mailings"
-msgstr ""
+msgstr "Nađi mailing"
 
 msgctxt "menu"
 msgid "Unsubscribe"
@@ -1202,7 +1202,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
-msgstr ""
+msgstr "Potvrdi"
 
 msgctxt "menu"
 msgid "Subscribe"
@@ -1300,11 +1300,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviReport"
-msgstr ""
+msgstr "CiviReport"
 
 msgctxt "menu"
 msgid "CiviCRM Reports"
-msgstr ""
+msgstr "CiviCRM izveštaji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1357,7 +1357,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Search"
-msgstr ""
+msgstr "Pretraga"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1367,7 +1367,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Contacts"
-msgstr ""
+msgstr "Kontakti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1377,17 +1377,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Email"
-msgstr ""
+msgstr "Novi email"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Tags (Categories)"
-msgstr ""
+msgstr "Uredi tagove (kategorije)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Dashboard"
-msgstr ""
+msgstr "Kontrolna tabla"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1492,7 +1492,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Campaigns"
-msgstr ""
+msgstr "Kampanje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1587,7 +1587,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Localization"
-msgstr ""
+msgstr "Lokalizacija"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1597,17 +1597,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Users and Permissions"
-msgstr ""
+msgstr "Korisnici i dozvole"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Permissions (Access Control)"
-msgstr ""
+msgstr "Dozvole (kontrola pristupa)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Settings"
-msgstr ""
+msgstr "Podešavanja sistema"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1637,7 +1637,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SMS Providers"
-msgstr ""
+msgstr "SMS provajderi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1697,7 +1697,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Podrška"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1707,27 +1707,27 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Documentation"
-msgstr ""
+msgstr "Dokumentacija"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Postavi pitanje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Pomoć eksperta"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "O CiviCRM-u"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Registruj sajt"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1752,7 +1752,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Reports"
-msgstr ""
+msgstr "Izveštaji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2058,12 +2058,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Attendee List"
-msgstr ""
+msgstr "Lista učesnika"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides lists of event attendees."
-msgstr ""
+msgstr "Lista svih učesnika na događaju"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2165,7 +2165,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "CiviCRM resursi"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2173,7 +2173,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "Uključi CiviCRM sadržaj"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
@@ -2186,27 +2186,27 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "Status sistema"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Components"
-msgstr ""
+msgstr "Komponente"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Extensions"
-msgstr ""
+msgstr "Ekstenzije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Moji izveštaji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Detalji o aktivnosti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
