--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-08 09:21+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-10-28 12:29+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4639,7 +4639,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "Haben Sie diese Seite auf CiviCRM.org registriert? Falls nicht, helfen Sie uns bitte, das CiviCRM-Ökosystem zum stärken, indem Sie sich ein paar Minuten Zeit nehmen und unser <a %1>Registrierungsformular ausfüllen</a>. Die dadurch gesammelten Informationen helfen uns dabei, Verbesserungen zu priorisieren, unsere Kommunikation zu verbessern und die Community aufzubauen."
 
 #: templates/CRM/Admin/Page/Admin.tpl
 msgid "plus sign"
@@ -5039,7 +5039,7 @@ msgid ""
 "<p>You may also want to check the directory for <a href=\"%2/%1\" "
 "target=\"_blank\">native %1 modules</a> that may be useful for you (CMS-"
 "specific modules are not listed here)."
-msgstr ""
+msgstr "Sie können zudem nach <a href=\"%2/%1\" target=\"_blank\">nativen %1-Modulen</a> suchen, die nützlich für Ihr Anwendungsszenario sind (CMS-spezifische Module werden hier nicht aufgelistet)."
 
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
