--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -49,7 +49,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-26 14:19+0000\n"
+"PO-Revision-Date: 2016-10-28 12:24+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -26064,7 +26064,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extensions"
-msgstr ""
+msgstr "Erweiterungen"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extension Error"
